feat(api): добавить расчет рейтингов и новые параметры сортировки для команд
